# snowflake-biz-lab

./: .env.catalogs.example  .env.example  .env.jenkins.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  README.md  SECURITY.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yml
config/: snowflake_utils.py
dbt/: dbt_project.yml
docs/: architecture.md  command-reference.md  credentials.md  demo-release-launchpad-mac.md  demo-release-launchpad-windows.md  dev-source-launchpad-mac.md  dev-source-launchpad-windows.md  fluid-gap-register.md  fluid-versions.md  getting-started.md  glossary.md  jenkins-scm-handoff.md  launchpad-common.md  launchpad-recovery.md  mac-launchpad.md  plan-verification-checklist.md  scenario-validation-matrix.md  snowflake-first-success.md  troubleshooting.md  variant-playbook-mac.md  variant-playbook-windows.md
fluid/: README.md
governance/: README.md  apply_metadata.py  datamesh_manager_mapping.yml  metadata.yml  metadata_utils.py  render_metadata_sql.py  verify_metadata.py
jenkins/: plugins.txt
scripts/: _ai_forge_common.py  bootstrap_entropy_local.py  bootstrap_workspaces.py  forge_b1_live_ai.py  forge_b2_mcp.py  forge_pre1_dlt.py  forge_pre2_airbyte.py  get_first_build_id.py  jenkins_param_defaults.py  local_env_utils.py  local_url_utils.py  preflight.py  refresh_dbt_docs.py  reset_demo_state.py  reset_entropy_local.py  run_ai_forge_b1.py  run_compose_forge_c1.py  run_jenkins_build.py  run_mcp_forge_b2.py  setup_local_demo.sh  setup_mac_launchpad.sh  setup_windows_launchpad.ps1  sync_jenkins_job.py
seed/: README.md  generate_seed_data.py  (+6 more)
(+114 files in other folders)
